fix: css overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -23,3 +23,9 @@
 .bordered {
   border: 1px solid rgba(143, 142, 138, 0.3);
 }
+
+.breadcrumb.active>.title {
+  width: 75vw;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
